<resources>
    <string name="app_name">Exercise-Menu</string>
   <string name="judul">LOGIN USER</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="mk_user">Masukkan Username</string>
    <string name="mk_pass">Masukkan Password</string>
    <string name="sign">SIGN-IN</string>
    <string name="judul_menu">Menu Hitung Bangun Datar</string>
    <string name="htg_persegi">Menghitung Persegi</string>
    <string name="htg_lingkar">Menghitung Lingkaran</string>
    <string name="htg_pp">Menghitung Persegi Panjang</string>
    <string name="htg_segitiga">Menghitung Segitiga</string>
    <string name="htg_trapesium">Menghitung Trapesium</string>
    <string name="htg_luas">Hitung Luas</string>
 <string name="htg_kel">Hitung Keliling</string>
    <string name="htg_keliling_persegi">Keliling Persegi</string>
 <string name="htg_keliling_persegip">Keliling Persegi Panjang</string>
 <string name="htg_keliling_ling">Keliling Lingkaran</string>
 <string name="htg_keliling_s3">Keliling Segitiga</string>
 <string name="htg_keliling_trapesium">Keliling Trapesium</string>

 <string name="htg_luas_persg">Luas Persegi</string>
 <string name="htg_luas_ling">Luas Lingkaran</string>
 <string name="htg_luas_pp">Luas Persegi Panjang</string>
 <string name="htg_luas_se3">Luas Segitiga</string>
 <string name="htg_luas_trape">Luas Trapesium</string>
 <string name="persegi_sisi">Masukkan sisi</string>
 <string name="lingkaran_jari">Masukkan jari-jari</string>
<string name="pp_panjang">Masukkan panjang</string>
<string name="pp_lebar">Masukkan lebar</string>
<string name="segitiga_alas">Masukkan alas</string>
<string name="segitiga_tinggi">Masukkan tinggi</string>
 <string name="segitiga_sisimiring">Masukkan sisi miring</string>
<string name="tra_atas">Masukkan sisi BC</string>
 <string name="tra_bawah">Masukkan sisi AD</string>
 <string name="tra_SAMPING">Masukkan sisi AB</string>
 <string name="tra_tinggi">Masukkan sisi t</string>





















































</resources>
