<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="50dp"
            android:text="@string/judul_menu"
            android:textAlignment="center"

            android:textSize="30dp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/persegi"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:text="@string/htg_persegi"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lingkaran"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:text="@string/htg_lingkar"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ppanjang"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="@string/htg_pp"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/segitiga"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:text="@string/htg_segitiga"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/trapesium"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:text="@string/htg_trapesium"

            android:textSize="20sp" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="bottom"
            android:orientation="vertical"
            >

        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>