<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorhijaup"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="50dp"
            android:text="@string/judul"
            android:textAlignment="center"
          android:textColor="@color/colorhh"

            android:textSize="35dp"
            android:textStyle="bold"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user"

                    android:textSize="20sp"
                    />
                <EditText
                    android:id="@+id/editname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    android:hint="@string/mk_user"
                    android:inputType="textPersonName"




                    />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"

                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mk_pass"
                    android:inputType="textPersonName"
                />
            </TableRow>
        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="bottom"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/btnok"
                android:layout_width="150dp"
                android:layout_height="49dp"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorkuning"

                android:text="@string/sign"/>
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>