<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/lingkan" />


        <TextView
            android:id="@+id/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="50dp"
            android:text="@string/htg_keliling_ling"
            android:textAlignment="center"
            android:clickable="true"

            android:textSize="30dp"
            android:textStyle="bold" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/lingkaran_jari"

                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/editLI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"


                android:inputType="number"




                />

        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/btnok"
                android:layout_width="150dp"
                android:layout_height="49dp"
                android:layout_gravity="center"



                android:text="@string/htg_kel" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>